# fwk_rtos

./: .gitignore  .gitmodules  .xmos_ignore_source_check  CHANGELOG.rst  CMakeLists.txt  Jenkinsfile  README.md  index.rst  settings.json  settings.yml
doc/: Doxyfile.inc  (+3 more)
modules/: CMakeLists.txt
modules/FreeRTOS/: CMakeLists.txt
modules/bsp_config/: CMakeLists.txt
modules/bsp_config/XCORE-AI-EXPLORER_1V1/platform/: app_pll_ctrl.c  app_pll_ctrl.h  driver_instances.c  platform_conf.h  platform_init.c  platform_init.h
modules/bsp_config/XCORE-AI-EXPLORER_2V0/platform/: aic3204.h  driver_instances.c  driver_instances.h  platform_conf.h  platform_init.c  platform_start.c
modules/drivers/: CMakeLists.txt
modules/drivers/clock_control/: CMakeLists.txt
modules/drivers/clock_control/api/: rtos_clock_control.h  rtos_clock_control_rpc.h
modules/drivers/clock_control/src/: rtos_clock_control.c  rtos_clock_control_rpc.c
modules/drivers/dfu/: CMakeLists.txt
modules/drivers/dfu/api/: rtos_dfu_image.h
modules/drivers/dfu/src/: rtos_dfu_image.c
modules/drivers/gpio/: CMakeLists.txt
modules/drivers/gpio/api/: rtos_gpio.h  rtos_gpio_rpc.h
modules/drivers/gpio/src/: rtos_gpio.c  rtos_gpio_rpc.c
modules/drivers/i2c/: CMakeLists.txt
modules/drivers/i2c/api/: rtos_i2c_master.h  rtos_i2c_master_rpc.h  rtos_i2c_slave.h
modules/drivers/i2c/src/: rtos_i2c_master.c  rtos_i2c_master_rpc.c  rtos_i2c_slave.c
modules/drivers/i2s/: CMakeLists.txt
modules/drivers/i2s/api/: rtos_i2s.h
modules/drivers/i2s/src/: rtos_i2s.c  rtos_i2s_rpc.c
modules/drivers/intertile/: CMakeLists.txt
modules/drivers/intertile/api/: rtos_intertile.h
modules/drivers/intertile/src/: rtos_intertile.c
modules/drivers/l2_cache/: CMakeLists.txt
modules/drivers/l2_cache/api/: rtos_l2_cache.h
modules/drivers/l2_cache/src/: rtos_l2_cache.c
modules/drivers/mic_array/: CMakeLists.txt
modules/drivers/mic_array/api/: rtos_mic_array.h  rtos_mic_array_rpc.h
modules/drivers/mic_array/src/: rtos_mic_array.c
modules/drivers/qspi_flash/: CMakeLists.txt
modules/drivers/qspi_flash/api/: rtos_qspi_flash.h  rtos_qspi_flash_rpc.h
modules/drivers/qspi_flash/src/: rtos_qspi_flash.c  rtos_qspi_flash_rpc.c
modules/drivers/rpc/: CMakeLists.txt
modules/drivers/rpc/api/: rtos_driver_rpc.h  rtos_rpc.h
modules/drivers/rpc/src/: rtos_rpc.c
modules/drivers/spi/: CMakeLists.txt
modules/drivers/spi/api/: rtos_spi_master.h  rtos_spi_master_rpc.h  rtos_spi_slave.h
modules/drivers/spi/src/: rtos_spi_master.c  rtos_spi_master_rpc.c  rtos_spi_slave.c
modules/drivers/swmem/: CMakeLists.txt
modules/drivers/swmem/api/: rtos_swmem.h
modules/drivers/swmem/src/: rtos_swmem.c
modules/drivers/trace/: CMakeLists.txt
modules/drivers/uart/: CMakeLists.txt
modules/drivers/uart/api/: rtos_uart_rx.h  rtos_uart_tx.h  rtos_uart_tx_rpc.h
modules/drivers/uart/src/: rtos_uart_rx.c  rtos_uart_tx.c  rtos_uart_tx_rpc.c
modules/drivers/usb/: CMakeLists.txt
modules/drivers/usb/api/: rtos_usb.h
modules/drivers/usb/src/: rtos_usb.c  xud_xfer_data.S  xud_xfer_data.h
modules/drivers/wifi/: CMakeLists.txt
modules/multitile_support/: CMakeLists.txt
modules/multitile_support/api/: soc.h  soc_channel.h
modules/multitile_support/src/: soc_intertile_channel.c
modules/osal/: CMakeLists.txt
modules/osal/FreeRTOS/: rtos_osal_event_group_port.c  rtos_osal_heap.c  rtos_osal_mutex_port.c  rtos_osal_port.h  rtos_osal_queue_port.c  rtos_osal_semaphore_port.c  rtos_osal_thread_port.c  rtos_osal_time.c
modules/rtos/drivers/mic_array/: CMakeLists.txt
modules/rtos_support/: CMakeLists.txt
modules/rtos_support/api/: rtos_cores.h  rtos_interrupt.h  rtos_irq.h  rtos_locks.h  rtos_macros.h  rtos_printf.h  rtos_support.h  rtos_time.h
modules/rtos_support/src/: rtos_cores.c  rtos_interrupt_impl.h  rtos_irq.c  rtos_locks.c  rtos_time.c
modules/sw_services/: CMakeLists.txt
modules/sw_services/concurrency_support/: CMakeLists.txt
modules/sw_services/concurrency_support/api/: concurrency_support.h  mrsw_lock.h
modules/sw_services/device_control/: CMakeLists.txt
modules/sw_services/device_control/api/: device_control.h  device_control_shared.h
modules/sw_services/device_control/host/: control_host_support.h  device_access_i2c_rpi.c  device_access_spi_rpi.c  device_access_usb.c  device_control_host.h  util.c  util.h
modules/sw_services/device_control/src/: device_control.c  resource_table.c
modules/sw_services/dhcpd/: CMakeLists.txt
modules/sw_services/dhcpd/FreeRTOS/: berkeley_compat.h  dhcpd.c
modules/sw_services/dhcpd/api/: dhcpd.h
modules/sw_services/dispatcher/: CMakeLists.txt  README.rst
modules/sw_services/fatfs/: CMakeLists.txt
modules/sw_services/fatfs/FreeRTOS/: diskio.c  ffconf.h  fs_support.c  fs_support.h
modules/sw_services/fatfs/host/: CMakeLists.txt
modules/sw_services/generic_pipeline/: CMakeLists.txt
modules/sw_services/generic_pipeline/api/: generic_pipeline.h
modules/sw_services/generic_pipeline/src/: generic_pipeline.c
modules/sw_services/http/: CMakeLists.txt
modules/sw_services/inferencing/: CMakeLists.txt
modules/sw_services/inferencing/api/: InferenceEngine.hpp
modules/sw_services/inferencing/src/: debug_log.cc  micro_time.cc  xcore_rtos_load_from_flash.cc
modules/sw_services/json/: CMakeLists.txt
modules/sw_services/mqtt/: CMakeLists.txt
modules/sw_services/mqtt/FreeRTOS/: MQTTFreeRTOS.c  MQTTFreeRTOS.h
modules/sw_services/sntpd/: CMakeLists.txt
modules/sw_services/sntpd/FreeRTOS/: sntpd.c  sntpd.h
modules/sw_services/tls_support/: CMakeLists.txt
modules/sw_services/tls_support/FreeRTOS/: mbedtls_support.c
modules/sw_services/tls_support/api/: tls_support.h
modules/sw_services/usb/: CMakeLists.txt
modules/sw_services/usb/FreeRTOS/: usb_support.c
modules/sw_services/usb/api/: usb_support.h
modules/sw_services/usb/msc/: msc_disk_manager.c  msc_disk_manager.h  msc_flashdisk.c  msc_ramdisk.c
modules/sw_services/usb/portable/: dcd_xcore.c  tusb_nstackwords.S  tusb_os_custom.h
modules/sw_services/wifi_manager/: CMakeLists.txt
(+272 files in other folders)
