
add_subdirectory(clock_control)
add_subdirectory(dfu)
add_subdirectory(gpio)
add_subdirectory(i2c)
add_subdirectory(i2s)
add_subdirectory(intertile)
add_subdirectory(l2_cache)
add_subdirectory(mic_array)
add_subdirectory(qspi_flash)
add_subdirectory(rpc)
add_subdirectory(spi)
add_subdirectory(swmem)
add_subdirectory(trace)
add_subdirectory(uart)
add_subdirectory(usb)
add_subdirectory(wifi)
